Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • gstreamer gstreamer
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 1.1k
    • Issues 1.1k
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 497
    • Merge requests 497
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Snippets
    • Snippets
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GStreamerGStreamer
  • gstreamergstreamer
  • Issues
  • #2529
Closed
Open
Issue created Apr 26, 2023 by Jason Tran@knownastron

videoflip 1.22.2 not rotating video when extracting frames

Describe your issue

Gstreamer with videoflip method=automatic is not rotating a video that has the metadata "rotation": 90. The output frames maintain the original 90 degree rotation.

I then tried setting videoflip method=counterclockwise and the video still wouldn't flip properly.

This video would flip properly when using gstreamer 1.16 so I downloaded that binary and confirmed the flip is correct for 1.16.

Expected Behavior

The video should be flipped counterclockwise 1 time.

Observed Behavior

The output frames maintain the 90 degree rotation.

Setup

  • Operating System: MacOS Ventura 13.3.1
  • Device: Computer
  • GStreamer Version: GStreamer 1.22.2
  • Command line:
gst-launch-1.0 -q filesrc location="./output.mp4" ! qtdemux ! h264parse ! avdec_h264 ! videorate ! video/x-raw,framerate=15/1 ! queue ! videoconvert  ! video/x-raw,format=RGB ! videoflip method=automatic ! queue ! pngenc ! multifilesink location="./frames/frame%d.png"
gst-launch-1.0 -q filesrc location="./output.mp4" ! qtdemux ! h264parse ! avdec_h264 ! videorate ! video/x-raw,framerate=15/1 ! queue ! videoconvert  ! video/x-raw,format=RGB ! videoflip method=counterclockwise ! queue ! pngenc ! multifilesink location="./frames/frame%d.png"

Steps to reproduce the bug

  1. Download the output.mp4 video
  2. open terminal
  3. run gst-launch-1.0 --version
gst-launch-1.0 version 1.22.2
GStreamer 1.22.2
https://github.com/Homebrew/homebrew-core
  1. run either of the commands above.

How reproducible is the bug?

Always.

Screenshots if relevant

Solutions you have tried

  • validated that the video frames are flipped for 1.16

Related non-duplicate issues

Additional Information

output

video-meta-data.txt Additional Information This was obtained using this command:

ffprobe -hide_banner -loglevel fatal -show_error -show_format -show_streams -show_programs -show_chapters -show_private_data -print_format  json ./output.mp4  > video-meta-data.txt
Assignee
Assign to
Time tracking